--- a/index.html
+++ b/index.html
@@ -1,91 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Akbarzoda Shoxjaxon">
-  <meta name="keywords" content="HTML, CSS, JavaScript, A.Shoxjaxon, Shoxjaxon Akbarzoda, Shoxjaxon, Portfoli">
-  <title>A.Shoxjaxon</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="icon" type="icon" href="shoxjaxon.jpg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Akbarzoda Shoxjaxon">
+    <meta name="keywords" content="HTML, CSS, JavaScript, A.Shoxjaxon, Shoxjaxon Akbarzoda, Shoxjaxon, Portfoli">
+    <title>A.Shoxjaxon</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="icon" href="shoxjaxon.jpg">
 </head>
+
 <body>
-  
-  <main>
-    <div class="glass">
-      <div class="dashboard">
-        <div class="user">
-          <img src="shoxjaxon.jpg" alt="">
-          <h3>Shoxjaxon</h3>
-          <p>Akparzoda</p>
-        </div>
-        <div class="links">
-          <div class="link">
-            <a href="https://sam-itcenter.uz/" target="_blank">
-            <img src="./imgs/logo1.png">
-            <h2>Hamkor Sayt</h2></a>
-          </div>
-          <div class="link">
-            <a href="about/ASHsayt/index.html">
-            <img src="./imgs/logo1.png">
-            <h2>Portfolio-1</h2></a>
-          </div>
-          <div class="link">
-            <a href="about/index.html">
-            <img src="./imgs/logo1.png">
-            <h2>Portfolio-2</h2></a>
-          </div>
-          <div class="link">
-            <a href="https://t.me/SAMARQAND_IT_CENTER" target="_blank">
-            <img src="./imgs/1.png">
-            <h2>Telegram</h2></a>
-          </div>
-          <div class="link">
-            <a href="https://www.instagram.com/itcentersamarqandtuman/" target="_blank">
-            <img src="./imgs/4.png">
-            <h2>Instagram</h2></a>
-          </div>
-        </div>
-      </div>
-      <div class="skills">
-        <div class="status">
-          <h1>Active Skills</h1>
-          <input type="text">
-        </div>
-        <div class="cards">
-          <div class="card">
-            <img src="./imgs/html.png" alt="">
-            <div class="card-info">
-              <h2>HTML</h2>
-              <p></p>
-              <div class="progress html"></div>
+
+    <main>
+        <div class="glass">
+            <div class="dashboard">
+                <div class="user">
+                    <img src="shoxjaxon.jpg" alt="">
+                    <h3>Shoxjaxon</h3>
+                    <p>Akparzoda</p>
+                </div>
+                <div class="links">
+                    <div class="link">
+                        <a href="https://sam-itcenter.uz/" target="_blank">
+                            <img src="./imgs/logo1.png">
+                            <h2>Hamkor Sayt</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="about/ASHsayt/index.html">
+                            <img src="./imgs/logo1.png">
+                            <h2>About me</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="about/index.html">
+                            <img src="./imgs/logo1.png">
+                            <h2>Portfolio</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="https://t.me/SAMARQAND_IT_CENTER" target="_blank">
+                            <img src="./imgs/1.png">
+                            <h2>Telegram</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="https://www.instagram.com/itcentersamarqandtuman/" target="_blank">
+                            <img src="./imgs/4.png">
+                            <h2>Instagram</h2>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <h2 class="percentage">96%</h2>
-          </div>
-          <div class="card">
-            <img src="./imgs/css.png" alt="">
-            <div class="card-info">
-              <h2>CSS</h2>
-              <p></p>
-              <div class="progress css"></div>
+            <div class="skills">
+                <div class="status">
+                    <h1>Active Skills</h1>
+                    <input type="text">
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="./imgs/html.png" alt="">
+                        <div class="card-info">
+                            <h2>HTML</h2>
+                            <p></p>
+                            <div class="progress html"></div>
+                        </div>
+                        <h2 class="percentage">96%</h2>
+                    </div>
+                    <div class="card">
+                        <img src="./imgs/css.png" alt="">
+                        <div class="card-info">
+                            <h2>CSS</h2>
+                            <p></p>
+                            <div class="progress css"></div>
+                        </div>
+                        <h2 class="percentage">70%</h2>
+                    </div>
+                    <div class="card">
+                        <img src="./imgs/js.png" alt="">
+                        <div class="card-info">
+                            <h2>JavaScript</h2>
+                            <p></p>
+                            <div class="progress js"></div>
+                        </div>
+                        <h2 class="percentage">50%</h2>
+                    </div>
+                </div>
             </div>
-            <h2 class="percentage">70%</h2>
-          </div>
-          <div class="card">
-            <img src="./imgs/js.png" alt="">
-            <div class="card-info">
-              <h2>JavaScript</h2>
-              <p></p>
-              <div class="progress js"></div>
-            </div>
-            <h2 class="percentage">50%</h2>
-          </div>
         </div>
-      </div>
-    </div>
-  </main>
-  <div class="circle1"></div>
-  <div class="circle2"></div>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
 
 </body>
+
 </html>
