--- a/about/ASHsayt/index.html
+++ b/about/ASHsayt/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <a href="../../index.html" class="sinf-1">SITE</a>
-            <a href="../index.html" class="sinf-2">Portfolio-2</a>
+            <a href="../index.html" class="sinf-2">Portfolio</a>
             <div class="box2">
                 <p class="p">Qiziqishlarim</p>
                 <div>
