--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <div class="asosiy">
-            <h1>Assalomu Aleykum!</h1>
+            <h1>Assalomu Alekum</h1>
             <a href="https://sam-itcenter.uz/">HAMKOR SITE</a>
             <a href="./ASHsayt/index.html">About me</a>
             <a href="../index.html">SITE</a>
