--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
             <a href="Topshiriqlar_Bazasi/button_animatsiya/index.html" target="_blank" class="box">
                 <div>
                     <img src="images/button.jpg">
-                    <h2>Btton Animatsiya</h2>
+                    <h2>Button Animatsiya</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/HomeID/index.html" target="_blank" class="box">
