--- a/about/ASHsayt/index.html
+++ b/about/ASHsayt/index.html
@@ -33,8 +33,10 @@
                         <b style="color: white;">Instagram</b>: @shoxja_offical</p>
                 </div>
             </div>
-            <a href="../../index.html" class="sinf-1">SITE</a>
-            <a href="../index.html" class="sinf-2">Portfolio</a>
+            <div class="button">
+                <a href="../../index.html" class="sinf-1">SITE</a>
+                <a href="../index.html" class="sinf-2">Portfolio</a>
+            </div>
             <div class="box2">
                 <p class="p">Qiziqishlarim</p>
                 <div>
