--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>A.Shoxjaxon</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="icon" href="shoxjaxon.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
 <body>
@@ -41,14 +42,14 @@
                         </a>
                     </div>
                     <div class="link">
-                        <a href="https://t.me/SAMARQAND_IT_CENTER" target="_blank">
+                        <a href="https://t.me/shoxjaxon007akbarzoda" target="_blank">
                             <img src="./imgs/1.png">
                             <h2>Telegram</h2>
                         </a>
                     </div>
-                    <div class="link">
-                        <a href="https://www.instagram.com/itcentersamarqandtuman/" target="_blank">
-                            <img src="./imgs/4.png">
+                    <div class="link linka">
+                        <a href="https://www.instagram.com/shoxja_offical/" target="_blank">
+                            <i class="fab fa-instagram" id="insta" aria-hidden="true"></i>
                             <h2>Instagram</h2>
                         </a>
                     </div>
