--- a/about/index.html
+++ b/about/index.html
@@ -13,16 +13,18 @@
 
 <body>
     <section id="asosiy">
-        <header>
-            <nav>
-                <h1>Akparzoda Shoxjaxon</h1>
-            </nav>
-        </header>
-        <div class="asosiy">
-            <h1>Assalomu Alekum</h1>
-            <a href="https://sam-itcenter.uz/">HAMKOR SITE</a>
-            <a href="./ASHsayt/index.html">About me</a>
-            <a href="../index.html">SITE</a>
+        <div class="sass">
+            <header>
+                <nav>
+                    <h1 class="matn">Akparzoda Shoxjaxon</h1>
+                </nav>
+            </header>
+            <div class="asosiy">
+                <h1>Assalomu Alekum</h1>
+                <a href="https://sam-itcenter.uz/">HAMKOR SITE</a>
+                <a href="./ASHsayt/index.html">About me</a>
+                <a href="../index.html">SITE</a>
+            </div>
         </div>
     </section>
     <div class="box4 boxes">
