--- a/about/index.html
+++ b/about/index.html
@@ -12,18 +12,18 @@
 </head>
 
 <body>
-    <section id="asosiy">
+    <section class="asosiy1">
         <div class="sass">
             <header>
                 <nav>
-                    <h1 class="matn">Akparzoda Shoxjaxon</h1>
+                    <h1 class="matn1">Akparzoda Shoxjaxon</h1>
                 </nav>
             </header>
             <div class="asosiy">
-                <h1>Assalomu Alekum</h1>
-                <a href="https://sam-itcenter.uz/">HAMKOR SITE</a>
-                <a href="./ASHsayt/index.html">About me</a>
-                <a href="../index.html">SITE</a>
+                <h1 class="matn1">Assalomu Alekum</h1>
+                <a href="https://sam-itcenter.uz/" class="matn">HAMKOR SITE</a>
+                <a href="./ASHsayt/index.html" class="matn">About me</a>
+                <a href="../index.html" class="matn">SITE</a>
             </div>
         </div>
     </section>
