--- a/about/index.html
+++ b/about/index.html
@@ -29,58 +29,64 @@
     </section>
     <div class="box4 boxes">
         <p class="p">Projects</p>
-        <div>
-            <a href="projects/Register/index.html" target="_blank" class="box">
+        <div class=" sanash ">
+            <a href="projects/Register/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/login.jpg">
+                    <img src="images/login.jpg ">
                     <h2>Login</h2>
                 </div>
             </a>
-            <a href="projects/Calculator/index.html" target="_blank" class="box">
+            <a href="projects/Calculator/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/calc.jpg">
+                    <img src="images/calc.jpg ">
                     <h2>Calculator</h2>
                 </div>
             </a>
-            <a href="projects/topshiriq-2/index.html" target="_blank" class="box">
+            <a href="projects/topshiriq-2/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/topshiriq.jpg">
+                    <img src="images/topshiriq.jpg ">
                     <h2>Loading</h2>
                 </div>
             </a>
-            <a href="projects/real_topshiriq_finish/index.html" target="_blank" class="box">
+            <a href="projects/real_topshiriq_finish/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/real_topshiriq.jpg">
+                    <img src="images/real_topshiriq.jpg ">
                     <h2>Real_topshiriq</h2>
                 </div>
             </a>
-            <a href="Topshiriqlar_Bazasi/button_animatsiya/index.html" target="_blank" class="box">
+            <a href="Topshiriqlar_Bazasi/button_animatsiya/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/button.jpg">
+                    <img src="images/button.jpg ">
                     <h2>Button Animatsiya</h2>
                 </div>
             </a>
-            <a href="Topshiriqlar_Bazasi/HomeID/index.html" target="_blank" class="box">
+            <a href="Topshiriqlar_Bazasi/HomeID/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/homeid.jpg">
+                    <img src="images/homeid.jpg ">
                     <h2>Home ID</h2>
                 </div>
             </a>
-            <a href="Topshiriqlar_Bazasi/LogIn_page/index.html" target="_blank" class="box">
+            <a href="Topshiriqlar_Bazasi/LogIn_page/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/login-page.jpg">
+                    <img src="images/login-page.jpg ">
                     <h2>Login Page</h2>
                 </div>
             </a>
-            <a href="Topshiriqlar_Bazasi/Portfolio_Topshiriq/index.html" target="_blank" class="box">
+            <a href="Topshiriqlar_Bazasi/Portfolio_Topshiriq/index.html " target="_blank " class="box boxitem ">
                 <div>
-                    <img src="images/login-small.jpg">
+                    <img src="images/login-small.jpg ">
                     <h2>Login</h2>
+                </div>
+            </a>
+            <a href="Topshiriqlar_Bazasi/gadgetarium/index.html " target="_blank " class="box boxitem ">
+                <div>
+                    <img src="images/online.jpg ">
+                    <h2>Gadgetarium</h2>
                 </div>
             </a>
 
         </div>
-        <div class="pagination"></div>
+        <div class="pagination "></div>
     </div>
 
     <script>
@@ -138,7 +144,7 @@
 
         function Mycontact() {
             name.forEach(item => {
-                item.style.width = "150px";
+                item.style.width = "150px ";
             })
         }
 
@@ -163,5 +169,7 @@
         }
     </script>
 </body>
+
+</html>
 
 </html>
