--- a/about/index.html
+++ b/about/index.html
@@ -29,57 +29,57 @@
     </section>
     <div class="box4 boxes">
         <p class="p">Projects</p>
-        <div class=" sanash ">
+        <div class="sanash">
             <a href="projects/Register/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/login.jpg ">
                     <h2>Login</h2>
                 </div>
             </a>
             <a href="projects/Calculator/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/calc.jpg ">
                     <h2>Calculator</h2>
                 </div>
             </a>
             <a href="projects/topshiriq-2/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/topshiriq.jpg ">
                     <h2>Loading</h2>
                 </div>
             </a>
             <a href="projects/real_topshiriq_finish/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/real_topshiriq.jpg ">
                     <h2>Real_topshiriq</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/button_animatsiya/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/button.jpg ">
                     <h2>Button Animatsiya</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/HomeID/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/homeid.jpg ">
                     <h2>Home ID</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/LogIn_page/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/login-page.jpg ">
                     <h2>Login Page</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/Portfolio_Topshiriq/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/login-small.jpg ">
                     <h2>Login</h2>
                 </div>
             </a>
             <a href="Topshiriqlar_Bazasi/gadgetarium/index.html " target="_blank " class="box boxitem ">
-                <div>
+                <div class="sanash1">
                     <img src="images/online.jpg ">
                     <h2>Gadgetarium</h2>
                 </div>
