--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyworeds" content="Akparzoda Shoxjaxon, Akparzoda, Shoxjaxon, Shoxjaxon portfolio, portfolio, about_me">
+    <meta name="description" contentze="Shoxajaxon Akparzoda portfolio">
+    <meta name="author" content="Akparzoda Shoxjaxon">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>A.Shoxjaxon</title>
     <link rel="stylesheet" href="style.css">
