--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, A.Shoxjaxon, Shoxjaxon Akbarzoda, Shoxjaxon, Portfoli">
     <title>A.Shoxjaxon</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="icon" href="shoxjaxon.jpg">
+    <link rel="icon" type="icon" href="shoxjaxon.jpg" sizes="40x40" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
