--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,12 @@
                     <h2>Gadgetarium</h2>
                 </div>
             </a>
-
+            <a href="Topshiriqlar_Bazasi/z-index/index.html " target="_blank " class="box boxitem ">
+                <div class="sanash1">
+                    <img src="images/z-index.jpg ">
+                    <h2>Z-INDEX</h2>
+                </div>
+            </a>
         </div>
         <div class="pagination "></div>
     </div>
