--- a/about/Topshiriqlar_Bazasi/z-index/index.html
+++ b/about/Topshiriqlar_Bazasi/z-index/index.html
@@ -16,16 +16,16 @@
             <img src="img/fire.svg" alt="">
             <a href="#" class="a1">hello@ballcamp.ru</a>
         </nav>
-        <p class="a1 p1">о. Бали</p>
-        <p class="p2">FREELANCE CAMP</p>
-        <p class="p3">Мечта свободного версталъщика</p>
-        <a href="#" class="a2">Узнать больше</a>
-        <div class="savol">
-            <p class="p4">Что там?</p>
-            <p class="p5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia voluptate explicabo dolore quis esse.</p>
+        <p class="p1">о. Бали</p>
+        <p class="p2 ">FREELANCE CAMP</p>
+        <p class="p3 ">Мечта свободного версталъщика</p>
+        <a href="# " class="a2 ">Узнать больше</a>
+        <div class="savol ">
+            <p class="p4 ">Что там?</p>
+            <p class="p5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia voluptate explicabo dolore quis esse.</p>
         </div>
-        <img src="img/rasm1.png" alt="" class="img1">
-        <img src="img/rasm.png" alt="" class="img2">
+        <img src="img/rasm1.png " alt=" " class="img1 ">
+        <img src="img/rasm.png " alt=" " class="img2 ">
     </div>
 
 </body>
