--- a/about/Topshiriqlar_Bazasi/z-index/index.html
+++ b/about/Topshiriqlar_Bazasi/z-index/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <nav>
-            <img src="img/fire.svg" alt="">
+            <a href="#"><img src="img/fire.svg" alt=""></a>
             <a href="#" class="a1">hello@ballcamp.ru</a>
         </nav>
         <p class="p1">о. Бали</p>
