--- a/about/index.html
+++ b/about/index.html
@@ -99,6 +99,12 @@
                     <h2>Superpeer</h2>
                 </div>
             </a>
+            <a href="Topshiriqlar_Bazasi/school/index.html " target="_blank " class="box boxitem ">
+                <div class="sanash1">
+                    <img src="images/school.jpg ">
+                    <h2>School</h2>
+                </div>
+            </a>
         </div>
         <div class="pagination "></div>
     </div>
