--- a/about/Topshiriqlar_Bazasi/school/index.html
+++ b/about/Topshiriqlar_Bazasi/school/index.html
@@ -44,7 +44,7 @@
                 <a href="#" class="btn1">Get Quote Now</a>
                 <a href="#" class="btn2">Learn More</a>
             </div>
-            <div class="img"><img src="img/none.svg"></div>
+            <div class="img"><img src="img/none.svg" class="img"></div>
         </section>
         <section class="section2">
             <div class="video">
