--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ===== BOX ICONS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="shoxjaxon.jpg">
-    <title>A.SHoxjaxon</title>
+    <title>A.Shoxjaxon</title>
 </head>
 
 <body>
