--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                     <img src="assets/images/z-index.jpg" alt="">
 
                     <div class="works_data">
-                        <a href="assets/Topshiriqlar_Bazasi/z-index/index.html"><i class="bx bx-link-alt"></i></a>
-                        <span class="works__title">Login</span>
+                        <a href="assets/Topshiriqlar_Bazasi/z-index/index.html" class="work__link"><i class="bx bx-link-alt"></i></a>
+                        <span class="works__title">Z-INDEX</span>
                     </div>
                 </div>
                 <div class="works__img">
