--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="home__container bd-grid">
                 <div class="home__data">
                     <div class="home__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="photo.png" alt="">
                     </div>
 
                     <h1 class="home_title">Shoxjaxon Akparzoda</h1>
@@ -85,7 +85,7 @@
             <div class="about_container bd-grid">
                 <div class="about__data">
                     <p class="about__description">Hello, I am a frontend developer with a passion for creating and developing websites.</p>
-                    <img src="assets/img/about.png" alt="" class="about__img">
+                    <img src="photo.png" alt="" class="about__img">
                 </div>
                 <div>
                     <div class="about_information">
