--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="about_container bd-grid">
                 <div class="about__data">
                     <p class="about__description">Hello, I am a frontend developer with a passion for creating and developing websites.</p>
-                    <img src="assets/img/about.png" alt="" class="about__img">
+                    <img src="logotiv.jpg" alt="" class="about__img">
                 </div>
                 <div>
                     <div class="about_information">
@@ -215,12 +215,17 @@
             <div class="services__container bd-grid">
                 <div class="services__content">
                     <i class="bx bx-code services__icon"></i>
-                    <h3 class="services__title">Web Designr</h3>
+                    <h3 class="services__title">Web Developer</h3>
                     <p class="services__description">This service that I offer is of high quality, and above all experiencen that I have in the labor field for many years. </p>
                 </div>
                 <div class="services__content">
                     <i class="bx bx-pen services__icon"></i>
                     <h3 class="services__title">Web Designr</h3>
+                    <p class="services__description">This service that I offer is of high quality, and above all experiencen that I have in the labor field for many years. </p>
+                </div>
+                <div class="services__content">
+                    <i class="bx bx-video services__icon"></i>
+                    <h3 class="services__title">Video Editing</h3>
                     <p class="services__description">This service that I offer is of high quality, and above all experiencen that I have in the labor field for many years. </p>
                 </div>
             </div>
@@ -271,7 +276,7 @@
                     <img src="assets/images/real_topshiriq.jpg" alt="">
                     <div class="works_data">
                         <a href="assets/projects/real_topshiriq_finish/index.html" class="work__link"><i class="bx bx-link-alt"></i></a>
-                        <span class="works__title">Login</span>
+                        <span class="works__title">Topshiriq</span>
                     </div>
                 </div>
                 <div class="works__img">
@@ -330,6 +335,13 @@
                         <span class="works__title">School</span>
                     </div>
                 </div>
+                <div class="works__img">
+                    <img src="assets/images/logintwo.jpg" alt="">
+                    <div class="works_data">
+                        <a href="assets/Topshiriqlar_Bazasi/login/index.html" class="work__link"><i class="bx bx-link-alt"></i></a>
+                        <span class="works__title">SignIn</span>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -353,12 +365,11 @@
                 <div>
                     <div class="contact__info">
                         <h3 class="contact__subtitle">Call Me</h3>
-                        <span class="contact__text">+998 00 000-00-00</span>
+                        <a class="contact__text" href='tel:+998 00 000-00-00'>+998 00 000-00-00</a>
                     </div>
-                    <div class="contact__info">
-                        <h3 class="contact__subtitle">E-mail</h3>
-                        <span class="contact__text">shoxjaxon007akbarzoda@gmail.com</span>
-                        <span class="contact__text">shoxja25a@gmail.com</span>
+                    <div class="contact__info ">
+                        <h3 class="contact__subtitle ">E-mail</h3>
+                        <a class="contact__text " href='email:shoxjaxon007akbarzoda@gmail.com'>shoxjaxon007akbarzoda@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -366,22 +377,22 @@
     </main>
 
     <!--===== FOOTER =====-->
-    <footer class="footer section" id="footer">
-        <div class="footer__container bd-grid">
-            <h1 class="footer__title">Shoxjaxon</h1>
-            <p class="footer_description">I am Shoxjaxon and this is my personal website, consult me here.</p>
+    <footer class="footer section " id="footer ">
+        <div class="footer__container bd-grid ">
+            <h1 class="footer__title ">Shoxjaxon</h1>
+            <p class="footer_description ">I am Shoxjaxon and this is my personal website, consult me here.</p>
 
-            <div class="footer__social">
-                <a href="#" class="footer__link"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>
+            <div class="footer__social ">
+                <a href="# " class="footer__link "><i class="bx bxl-facebook "></i></a>
+                <a href="# " class="footer__link "><i class="bx bxl-instagram "></i></a>
+                <a href="# " class="footer__link "><i class="bx bxl-twitter "></i></a>
             </div>
-            <p class="footer_copy">All rights reserved by - 2023</p>
+            <p class="footer_copy ">All rights reserved by - 2023</p>
         </div>
     </footer>
     <!--===== MAIN JS =====-->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script type="text/javascript " src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js "></script>
+    <script src="assets/js/main.js "></script>
 </body>
 
 </html>
